# um-agent-orchestration

./: .cz.toml  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  CLAUDE.md  CLI_IMMEDIATE_ACTION_PLAN.md  CLI_INTEGRATION_CONFIG.md  CLI_PHASE1_IMPLEMENTATION.md  CLI_PROJECT_EXECUTIVE_SUMMARY.md  CLI_PROJECT_MANAGEMENT_PLAN.md  EMERGENCY_DELIVERY_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SIMPLIFIED_ORCHESTRATION_PROJECT_DELIVERY_PLAN.md  THREAD_SAFETY_IMPROVEMENTS.md  debug_app_startup.py  debug_hanging_request.py  debug_minimal.py  debug_pty.py  debug_session_simple.py  demo_planning_workflow.sh  emergency_smoke_test.py  orchestrate  package-lock.json  pyproject.toml  quickstart.sh  requirements.txt  run.sh  tasks.db  tasks.db.backup  test_claude_integration.py  test_claude_session_reuse.py  (+18 more)
.cursor/rules/: AGENT.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly-burn-in.yml  release.yml
agents/: backend.py  base.py  data.py  frontend.py  generic.py  ml.py  registry.py
archive/: ARCHIVE_README.md
archive/current_implementation_2025_01_28/: AGENTS.md  AGENT_INTEGRATION_GUIDE.md  ARCHITECTURE_ANALYSIS.md  CLAUDE_AUTH_FIXED.md  CLAUDE_AUTH_SOLUTION.md  CLAUDE_CLI_INTEGRATION.md  CLAUDE_SESSION_REUSE.md  CLI_COMMUNICATION_TEMPLATES.md  CLI_IMPLEMENTATION_DESIGN.md  CLI_INTEGRATION_SUMMARY.md  CLI_RISK_REGISTER.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROVIDER_ENHANCEMENT_SUMMARY.md  ROADMAP_2025.md
archive/current_implementation_2025_01_28/agents/: backend.py  data.py  frontend.py  generic.py  ml.py  registry.py
config/: config.yaml  redis.conf  settings.json
dashboard/: dashboard.html  index.html  vite.config.js
dashboard/src/: App.jsx
database/: schema.sql  tasks.db-shm  tasks.db-wal
docker/monitoring/: docker-compose.yml  prometheus.yml  promtail-config.yml
docs/: CLI_INTEGRATION_DEVELOPER_GUIDE.md  CLI_INTEGRATION_USER_GUIDE.md  DASHBOARD_DEV.md  README.md  SPECIALIZED_AGENTS.md
docs/examples/: data-engineering-workflows.md  devops-infrastructure.md  machine-learning-projects.md  overnight-automation.md  web-application-development.md
examples/: backend-task.yaml  cli_manager_integration.py  data-task.yaml  feedback_loop_demo.py  frontend-task-full-access.yaml  frontend-task.yaml  full-access-examples.md  fullstack-webapp-job.md  overnight_development.sh  security-considerations.md  simple_workflow.sh  specialized_agents_demo.py
gitops/: branch_manager.py  checkpointer.py  merge_coordinator.py  prizer.py  utils.py  worktrees.py
monitoring/: metrics.py
orchestrator/: app.py  auth.py  cli_session.py  cli_session_manager.py  dispatcher.py  minimal_dispatcher.py  models.py  persistence.py  persistence_models.py  queue.py  settings.py  simple_dispatcher.py
providers/: anthropic_provider.py  claude_cli_provider.py  claude_interactive_provider.py  codex_cli_provider.py  codex_interactive_provider.py  cursor_cli_provider.py  gemini_api_provider.py  gemini_cli_provider.py  models.py  openai_provider.py  router.py
roles/: computational_biologist.yaml  fund_manager.yaml
scripts/: agent_helpers.py  init-full-access.sh  install.sh  merge_queue_processor.py  orchestrator_burn_in.py  run_cli_tests.py  test-full-access.py
specs/: AGENT_DESIGN.md  ARCHITECTURE.md  CLI_SPECIFICATION_ASSESSMENT.md  INTEGRATIONS.md  PHASED_IMPLEMENTATION_PLAN.md  ROADMAP.md  SIMPLIFIED_ORCHESTRATION_SPECS.md  SPECIFICATION_CONSOLIDATION_STRATEGY.md  TASK_QUEUE_FIX_SPECIFICATIONS.md  cli-integration-api.md  cli-integration-roadmap.md  cli-integration-security.md  cli-integration-specification.md  cli-integration-technical.yaml  cli-integration-tests.md  compbio_example.yaml  da_example.yaml  fm_example.yaml  implementation-summary.md  sample_task.yaml  task-persistence-specification.md
src/: __init__.py
src/cli/: __init__.py  orchestrate.py
src/core/: __init__.py  agent_api.py  agent_spawner.py  agent_types.py  autonomous_harness.py  claude_cli_manager.py  config.py  context_manager.py  database.py  enhanced_web_monitor.py  exceptions.py  feedback_loop.py  feedback_orchestrator.py  file_operations.py  file_utils.py  input_validator.py  interactive_planner.py  parallel_executor.py  resource_manager.py  subagent_pool.py  task_decomposer.py  task_queue.py  tools.py  web_monitor.py
src/utils/: __init__.py
systemd/: git-checkpointer.service  git-checkpointer.timer  git-prizer.service  git-prizer.timer  merge-processor.service  merge-processor.timer
tests/: README.md  conftest.py  test_cli_websocket.py
tests/acceptance/: test_risk.py  test_sample.py
tests/integration/: test_cli_end_to_end.py  test_cli_integration.py
tests/performance/: test_cli_load.py
tests/security/: test_cli_security.py  test_cli_security_enhanced.py
tests/unit/: test_agent_spawner_codex.py  test_agent_spawner_gemini.py  test_cli_auth.py  test_cli_manager.py  test_cli_persistence.py.skip  test_cli_session_manager.py  test_task_queue_recovery.py
tmuxp/: session.yaml
venv_orchestrator/: pyvenv.cfg
(+26 files in other folders)
