[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "um-agent-orchestration"
version = "0.1.0"
description = "Simplified multi-agent orchestrator for long-running AI coding tasks."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "click>=8.0.0",
  "pyyaml>=6.0",
  "dataclasses-json>=0.5.0",
  "psutil>=5.9",
  "anthropic>=0.3.0",
  "redis>=5.0.0",
]

[project.scripts]
orchestrate = "src.cli.orchestrate:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

